--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="description" content="multi-section landing page">
         <meta name="viewport" content="width-device-width,initial-scale=1">
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
@@ -42,7 +42,7 @@
             <p class="ps">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis adipisci impedit dicta explicabo laudantium ipsum ea tempore aut eveniet, sunt placeat, soluta at quae maiores sequi. Praesentium impedit reprehenderit repellendus eos eaque, omnis id porro dignissimos asperiores et nemo earum dolore, fugiat maiores veniam officia nobis. Laboriosam totam reprehenderit aperiam.</p>
         </div>
 
-        <script src="js/app.js"></script>
+        <script src="app.js"></script>
         
     </body>
 
